# terminal_emulation_learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp  print_all_modes.cpp
src/: errors.cpp  errors.h  linux_terminal.cpp  print_linux_modes.cpp  print_windows_modes.cpp  terminal.h  windows_modes.cpp  windows_modes.h
src/examples/: linux_example.cpp  print_windows_modes.cpp  windows_example.cpp
src/linux/: linux_terminal.cpp
src/windows/: windows_modes.cpp  windows_modes.h  windows_terminal.cpp
